--- a/sandbox/logo-page/logo-page.css
+++ b/sandbox/logo-page/logo-page.css
@@ -32,7 +32,7 @@
 * { box-sizing: border-box; }
 
 html {
-  font-size: 19px;
+  font-size: 18px;
 }
 
 body {
@@ -70,6 +70,15 @@ body {
 }
 
 .duo__cell:first-child { margin-right: 20px; }
+
+/* logo-page
+------------------------- */
+
+.logo-page__title {
+  font-size: 2.4rem;
+  font-weight: normal;
+  margin: 0 0 20px;
+}
 
 /* logo-lockup
 ------------------------- */
@@ -172,4 +181,35 @@ body {
 
 .custom-bg-button:hover {
   color: #6C6;
+}
+
+/* purchase well
+------------------------- */
+
+.purchase-well {
+  background: #DDD;
+  box-shadow: inset 0 3px 10px hsla(0, 0%, 0%, 0.05);
+  border-radius: 5px;
+}
+
+.purchase-well__cell {
+  padding: 20px;
+}
+
+.purchase-well__cell--copy li {
+  margin-bottom: 0.5em;
+}
+
+.purchase-button {
+  display: block;
+  background-color: #6C6;
+  background-image: linear-gradient( hsla(0, 0%, 0%, 0), hsla(0, 0%, 0%, 0.2) );
+  box-shadow: 0 3px 6px hsla(0, 0%, 0%, 0.2);
+  color: white;
+  font-size: 1.3rem;
+  width: 100%;
+  border: none;
+  border-radius: 10px;
+  padding: 20px 10px;
+  cursor: pointer;
 }
