🛠 add js for custom color, light/dark

--- a/modules/custom-colors/custom-color.mustache
+++ b/modules/custom-colors/custom-color.mustache
@@ -1,4 +1,5 @@
-<div class="custom-color" data-layer-src="{{imgSrc}}" data-default-color="{{color}}">
+<div class="custom-color"
+  data-default-color="{{color}}" data-title="{{title}}" data-layer-src="{{imgSrc}}">
   <span class="custom-color__preview" style="background-color: {{color}}"></span>
   <span class="custom-color__title">{{title}}</span>
 </div>
