--- a/modules/custom-colors/custom-color.mustache
+++ b/modules/custom-colors/custom-color.mustache
@@ -1,5 +1,5 @@
 <div class="custom-color"
-  data-default-color="{{color}}" data-title="{{title}}" data-layer-src="{{imgSrc}}">
+  data-default-color="{{color}}" data-title="{{title}}" data-layer-src="../img/{{imgSrc}}">
   <span class="custom-color__preview" style="background-color: {{color}}"></span>
   <span class="custom-color__title">{{title}}</span>
 </div>
