🐝 Huebee shades, saturations, cursor

--- a/modules/huebee/huebee.css
+++ b/modules/huebee/huebee.css
@@ -13,8 +13,10 @@
   cursor: pointer;
 }
 
-.huebee__selector {
+.huebee__cursor {
   position: absolute;
+  left: 0px;
+  top: 0px;
   border-color: white;
   border-style: solid;
   border-radius: 5px;
