--- a/modules/duo/duo.css
+++ b/modules/duo/duo.css
@@ -12,9 +12,9 @@
 }
 
 .duo__cell {
-  width: 460px;
+  width: 440px;
   float: left;
-  margin: 20px 0;
+  margin: 20px 10px;
 }
 
 .duo__cell:nth-child(2n+1) { margin-right: 20px; }
