logos, main asset alt

--- a/templates/logo-page.mustache
+++ b/templates/logo-page.mustache
@@ -23,7 +23,7 @@
 
     <div class="duo">
       <div class="duo__cell">
-        {{> asset-display mainAsset isMain="true"}}
+        {{> asset-display mainAsset isMain="true" title=title}}
       </div>
       <div class="duo__cell">
         <h1 class="logo-page__title">{{ title }}</h1>
