--- a/css/base.css
+++ b/css/base.css
@@ -10,7 +10,7 @@ html {
 body {
   font-family: Texta, sans-serif;
   line-height: 1.25;
-  background: #EEE;
+  background: #FFF;
   color: #555;
 }
 
