--- a/modules/homepage-header/homepage-header.css
+++ b/modules/homepage-header/homepage-header.css
@@ -4,39 +4,32 @@
 .homepage-header {
   background: transparent;
   color: #E21;
-  padding-top: 20px;
+  padding-top: 0px;
   padding-bottom: 20px;
-}
-
-.homepage-header .col {
-  position: relative;
-  margin-top: 0;
+  text-align: center;
 }
 
 .homepage-header__logo {
-  position: absolute;
-  left: 20px;
-  top: 5px;
-  width: 150px;
-  height: 150px;
-  fill: #555;
-}
-
-.homepage-header__copy {
-  padding-left: 190px;
+  width: 240px;
+  height: 240px;
+  fill: #E21;
+  margin-bottom: -30px;
 }
 
 .homepage-header__title {
-  font-size: 5.0rem;
+  font-size: 3.5rem;
+  text-transform: uppercase;
   line-height: 1;
   margin: 0;
   padding-top: 5px;
   margin-bottom: 5px;
-  letter-spacing: -0.02em;
+  letter-spacing: 0.2em;;
 }
 
 .homepage-header__tagline {
-  font-size: 1.8rem;
+  font-size: 1.2rem;
+  text-transform: uppercase;
   margin: 0;
-  font-style: italic;
+  font-weight: bold;
+  letter-spacing: 0.2em;;
 }
