--- a/modules/thumbnails/thumbnails.css
+++ b/modules/thumbnails/thumbnails.css
@@ -16,13 +16,58 @@
 .thumbnail {
   float: left;
   width: 180px;
-  background: white;
   margin: 5px;
-  border-radius: 5px;
-  padding: 20px;
+  padding: 5px;
 }
 
 .thumbnail__img {
   display: block;
   width: 100%;
 }
+
+
+
+.thumbnail__sprite {
+  display: block;
+  width: 170px;
+  height: 170px;
+  background-size: 850px 850px;
+  transform: scale(0.833);
+  transition: transform 0.2s;
+}
+
+.thumbnail:hover .thumbnail__sprite {
+  transform: scale(1);
+}
+
+.thumbnail__sprite--1 { background-image: url(../../img/thumbnail-sprite1.png); }
+.thumbnail__sprite--2 { background-image: url(../../img/thumbnail-sprite2.png); }
+
+.thumbnail__sprite--position-1-0 { background-position: -170px 0px; }
+.thumbnail__sprite--position-2-0 { background-position: -340px 0px; }
+.thumbnail__sprite--position-3-0 { background-position: -510px 0px; }
+.thumbnail__sprite--position-4-0 { background-position: -680px 0px; }
+
+.thumbnail__sprite--position-0-1 { background-position:    0px -170px; }
+.thumbnail__sprite--position-1-1 { background-position: -170px -170px; }
+.thumbnail__sprite--position-2-1 { background-position: -340px -170px; }
+.thumbnail__sprite--position-3-1 { background-position: -510px -170px; }
+.thumbnail__sprite--position-4-1 { background-position: -680px -170px; }
+
+.thumbnail__sprite--position-0-2 { background-position:    0px -340px; }
+.thumbnail__sprite--position-1-2 { background-position: -170px -340px; }
+.thumbnail__sprite--position-2-2 { background-position: -340px -340px; }
+.thumbnail__sprite--position-3-2 { background-position: -510px -340px; }
+.thumbnail__sprite--position-4-2 { background-position: -680px -340px; }
+
+.thumbnail__sprite--position-0-3 { background-position:    0px -510px; }
+.thumbnail__sprite--position-1-3 { background-position: -170px -510px; }
+.thumbnail__sprite--position-2-3 { background-position: -340px -510px; }
+.thumbnail__sprite--position-3-3 { background-position: -510px -510px; }
+.thumbnail__sprite--position-4-3 { background-position: -680px -510px; }
+
+.thumbnail__sprite--position-0-4 { background-position:    0px -680px; }
+.thumbnail__sprite--position-1-4 { background-position: -170px -680px; }
+.thumbnail__sprite--position-2-4 { background-position: -340px -680px; }
+.thumbnail__sprite--position-3-4 { background-position: -510px -680px; }
+.thumbnail__sprite--position-4-4 { background-position: -680px -680px; }
