--- a/modules/col/col.css
+++ b/modules/col/col.css
@@ -4,8 +4,5 @@
 /* one column */
 
 .col {
-  padding-left: 10px;
-  padding-right: 10px;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin: 20px 10px;
 }
