--- a/modules/purchase-well/purchase-well.css
+++ b/modules/purchase-well/purchase-well.css
@@ -2,13 +2,14 @@
 ------------------------- */
 
 .purchase-well {
-  background: #DDD;
-  box-shadow: inset 0 3px 10px hsla(0, 0%, 0%, 0.05);
+  background: #EEE;
   border-radius: 5px;
 }
 
 .purchase-well__cell {
-  padding: 20px;
+  padding: 10px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .purchase-well__cell--copy li {
@@ -27,4 +28,5 @@
   border-radius: 10px;
   padding: 20px 10px;
   cursor: pointer;
+  margin: 10px 0;
 }
