--- a/templates/homepage.mustache
+++ b/templates/homepage.mustache
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
 
-  <title>Logo Pizza - Logo for sale</title>
+  <title>Logo Pizza - Logos for sale</title>
 
 {{#each cssPaths}}
   <link rel="stylesheet" href="../{{this}}" />
@@ -13,13 +13,7 @@
 </head>
 <body>
 
-<!-- inline SVG symbols -->
-<svg xmlns="http://www.w3.org/2000/svg" width="0" height="0" display="none">
-  <symbol id="logo-pizza-logo" viewBox="0 0 1000 1000">
-    <path class="logo-pizza-logo__outline" d="M747 85c-13-1-26 7-31 19L595 346c-4 8-9 16-16 22l-71 71c-7 7-18-1-14-10l48-97c8-16-4-35-22-35-184 0-406 106-495 272-70 131-3 300 240 300 208 0 423-129 495-272 8-16-4-35-22-35H624c-19 0-28-23-15-36l122-122c7-7 17-11 27-11 19 0 28 23 15 36l-55 55c-8 8-8 22 0 30 4 4 10 6 15 6s11-2 15-6l121-121h80c14 0 26-8 31-20 60-139-17-279-233-288zM113 551c74-97 217-172 357-188 5-1 9 5 6 9l-89 178c-4 7-11 12-19 12H118c-6-1-9-7-5-11zm151 244c-3 6-9 10-16 9-118-3-220-70-172-190 3-7 9-11 16-11h255c6 0 10 7 8 12l-91 180zm407-191c5 0 8 6 5 10-74 97-217 172-357 188-5 1-9-5-6-9l89-177c4-7 11-12 19-12h250zm-25-176L524 550c-7 7-17 11-27 11-19 0-28-23-15-36l122-122c7-7 17-11 27-11 19 0 28 23 15 36zm279-89c-3 6-9 11-16 11H654c-6 0-10-7-8-12l90-180c3-6 9-10 16-9 153 10 212 91 173 190z"/>
-  </symbol>
-</svg>
-
+{{> inline-svg-symbols}}
 
 <div class="content-wrap">
 
@@ -27,17 +21,15 @@
 
   {{> homepage-intro}}
 
-  <ul class="thumbnails">
-    {{#each thumbnails}}
-      <li class="thumbnail">
-        <a class="thumbnail__link" href="{{slug}}.html">
-          <div class="thumbnail__sprite thumbnail__sprite--{{sprite}} thumbnail__sprite--position-{{spriteCol}}-{{spriteRow}}" title="{{title}}"></div>
-        </a>
-      </li>
-    {{/each}}
-  </ul>
+  {{> thumbnails}}
+
+  {{> custom}}
 
 </div> {{! content-wrap }}
+
+<div class="collage">
+  <img class="collage__image" src="../img/collage.png" alt="Logo Pizza logo pizza" />
+</div>
 
 {{#each jsPaths}}
   <script src="../{{this}}"></script>
