📝 flavor text, custom -> hire me

--- a/templates/homepage.mustache
+++ b/templates/homepage.mustache
@@ -23,7 +23,9 @@
 
   {{> thumbnails}}
 
-  {{> custom}}
+  {{> flavor-text}}
+
+  {{> hire-me firstLine="Need a custom logo?"}}
 
 </div> {{! content-wrap }}
 
