--- a/templates/logo-page.mustache
+++ b/templates/logo-page.mustache
@@ -80,6 +80,10 @@
       </div> <!-- duo -->
     {{/if}}
 
+    {{#if isSold}}
+      {{> hire-me firstLine="Want a logo like this one, but different?"}}
+    {{/if}}
+
   </div>
 
 </div>
