--- a/modules/hire-me/hire-me.css
+++ b/modules/hire-me/hire-me.css
@@ -1,27 +1,27 @@
-/* custom
+/* hire-me
 ------------------------- */
 
-.custom {
+.hire-me {
   border-radius: 20px;
   background: #EEE;
 }
 
-.custom__image {
+.hire-me__image {
   display: block;
   max-width: 100%;
   border-radius: 10px;
   padding: 20px;
 }
 
-.custom__copy {
+.hire-me__copy {
   font-size: 2.0rem;
   padding-left: 20px;
   padding-top: 150px;
   text-align: center;
 }
 
-.custom__copy__line {
+.hire-me__copy__line {
   display: block;
 }
 
-.custom__copy__line--1 { font-weight: bold; }
+.hire-me__copy__line--1 { font-weight: bold; }
