--- a/modules/hire-me/hire-me.mustache
+++ b/modules/hire-me/hire-me.mustache
@@ -1,7 +1,7 @@
 <div class="hire-me duo">
   <div class="duo__cell hire-me__copy">
     <span class="hire-me__copy__line hire-me__copy__line--1">{{firstLine}}</span>
-    <span class="hire-me__copy__line hire-me__copy__line--2">Hire me!</span>
+    <span class="hire-me__copy__line hire-me__copy__line--2">Let&rsquo;s chat!</span>
     <span class="hire-me__copy__line hire-me__copy__line--3">
       <a href="mailto:yo@metafizzy.co">yo@metafizzy.co</a>
     </span>
