🛠 site-footer, about, build img/

--- a/modules/asset-display/asset-display.mustache
+++ b/modules/asset-display/asset-display.mustache
@@ -2,6 +2,6 @@
   {{#unless isMain}}
     <h2 class="asset-display__title">{{title}}</h2>
   {{/unless}}
-  <img class="asset-display__img asset-display__img--big" src="../img/{{imgSrc}}" alt="{{title}}" />
-  <img class="asset-display__img asset-display__img--small" src="../img/{{imgSrc}}" alt="{{title}}, small preview" />
+  <img class="asset-display__img asset-display__img--big" src="img/{{imgSrc}}" alt="{{title}}" width="500" height="500" />
+  <img class="asset-display__img asset-display__img--small" src="img/{{imgSrc}}" alt="{{title}}, small preview" width="48" height="48" />
 </div>
