--- a/modules/filter/filter.mustache
+++ b/modules/filter/filter.mustache
@@ -1,4 +1,4 @@
-<div class="filter" data-js="filter">
+<div class="filter col" data-js="filter">
 
   <div class="filter__group filter__group--tag" data-filter-group="tag">
     <button class="filter__button is-selected" data-filter="">Any</button>
