--- a/modules/flavor-text/flavor-text.mustache
+++ b/modules/flavor-text/flavor-text.mustache
@@ -5,7 +5,7 @@
       <ul>
         <li>Production-ready asset files in vector formats — .ai, .pdf, .eps — and raster .png. Ready to be used in print, document, web, and video.</li>
         <li>Exclusive rights to use the logo. No one else will be able to purchase or use the same logo.</li>
-        <li>Variants: alternate imagery, one-color treatments for light and dark backgrounds, custom colors.</li>
+        <li>Variants: one-color treatments for light and dark backgrounds, custom colors, and/or alternate imagery.</li>
       </ul>
     </div>
   </div>
