--- a/templates/homepage.mustache
+++ b/templates/homepage.mustache
@@ -29,11 +29,15 @@
 
   {{> hire-me firstLine="Need a custom logo?"}}
 
+  {{> about}}
+
 </div> {{! content-wrap }}
 
 <div class="collage">
   <img class="collage__image" src="../img/collage.png" alt="Logo Pizza logo pizza" />
 </div>
+
+{{> site-footer}}
 
 {{#each jsPaths}}
   <script src="../{{this}}"></script>
