--- a/templates/logo-page.mustache
+++ b/templates/logo-page.mustache
@@ -73,7 +73,18 @@
       {{> hire-me firstLine="Want a logo like this one, but different?"}}
     {{/if}}
 
-  </div>
+    {{#if otherLogos}}
+      <div class="section">
+        <h2 class="section-title">Other {{otherTag}} logos</h2>
+        <ul class="thumbnails">
+          {{#each otherLogos}}
+            {{> thumbnail}}
+          {{/each}}
+        </ul>
+      </div>
+    {{/if}}
+
+  </div> {{! .logo-page }}
 
 </div>
 
