--- a/templates/logo-page.mustache
+++ b/templates/logo-page.mustache
@@ -4,7 +4,22 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
 
-  <title>{{title}} - Logo for sale</title>
+  <title>{{title}}{{#unless isSold}} - Logo for sale{{/unless}}</title>
+
+  <meta name="description" content="{{description}}" />
+  {{! Twitter card }}
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@metafizzyco" />
+  <meta name="twitter:title" content="{{title}}{{#unless isSold}} - Logo for sale{{/unless}}" />
+  <meta name="twitter:description" content="{{description}}" />
+  <meta name="twitter:image" content="http://logo.pizza/img/{{slug}}/card.png" />
+  {{! Facebook OpenGraph }}
+  <meta property="og:url" content="https://logo.pizza/{{slug}}.html" />
+  <meta property="og:type" content="article" />
+  <meta property="og:title" content="{{title}}" />
+  <meta property="og:image" content="http://logo.pizza/img/{{slug}}/card.png" />
+  <meta property="og:site_name" content="Logo Pizza" />
+  <meta property="og:description" content="{{description}}" />
 
 {{#each cssPaths}}
   <link rel="stylesheet" href="../{{this}}" />
