--- a/modules/logo-page/logo-page.css
+++ b/modules/logo-page/logo-page.css
@@ -6,3 +6,26 @@
   font-weight: normal;
   margin: 0 0 20px;
 }
+
+.logo-page__description {
+  margin-bottom: 20px;
+}
+
+.purchase-button {
+  display: block;
+  background-color: #6C6;
+  background-image: linear-gradient( hsla(0, 0%, 0%, 0), hsla(0, 0%, 0%, 0.2) );
+  box-shadow: 0 3px 6px hsla(0, 0%, 0%, 0.2);
+  color: white;
+  font-size: 1.3rem;
+  width: 100%;
+  border: none;
+  border-radius: 10px;
+  padding: 20px 10px;
+  cursor: pointer;
+  margin: 30px 0 40px;
+}
+
+.purchase-text li {
+  margin-bottom: 0.5em;
+}
