--- a/css/base.css
+++ b/css/base.css
@@ -4,12 +4,12 @@
 * { box-sizing: border-box; }
 
 html {
-  font-size: 18px;
+  font-size: 19px;
 }
 
 body {
-  font-family: Texta, sans-serif;
-  line-height: 1.25;
+  font-family: Texta, Avenir Next, sans-serif;
+  line-height: 1.3;
   background: #FFF;
   color: #555;
 }
