--- a/modules/duo/duo.css
+++ b/modules/duo/duo.css
@@ -12,9 +12,16 @@
 }
 
 .duo__cell {
-  width: 440px;
-  float: left;
   margin: 20px 10px;
 }
 
-.duo__cell:nth-child(2n+1) { margin-right: 20px; }
+@media screen and ( min-width: 768px ) {
+
+  .duo__cell {
+    float: left;
+    width: 40%;
+    width: calc( (100% - 60px) / 2 );
+  }
+  .duo__cell:nth-child(2n+1) { margin-right: 30px; }
+
+}
