--- a/modules/hire-me/hire-me.css
+++ b/modules/hire-me/hire-me.css
@@ -4,20 +4,21 @@
 .hire-me {
   border-radius: 20px;
   background: #EEE;
-  margin: 40px 0;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
 
 .hire-me__image {
   display: block;
-  max-width: 100%;
-  border-radius: 10px;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 400px;
   padding: 20px;
 }
 
 .hire-me__copy {
-  font-size: 1.8rem;
-  padding-left: 20px;
-  padding-top: 150px;
+  font-size: 1.4rem;
+  padding-top: 20px;
   text-align: center;
 }
 
@@ -26,3 +27,16 @@
 }
 
 .hire-me__copy__line--1 { font-weight: bold; }
+
+@media screen and ( min-width: 768px ) {
+
+  .hire-me__copy {
+    font-size: 1.8rem;
+    padding-top: 150px;
+  }
+
+  .hire-me__image {
+    max-width: 100%;
+  }
+
+}
