--- a/templates/homepage.mustache
+++ b/templates/homepage.mustache
@@ -10,6 +10,21 @@
   <link rel="stylesheet" href="../{{this}}" />
 {{/each}}
 
+  <meta name="description" content="Hot and ready logos for sale" />
+  {{! Twitter card }}
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@metafizzyco" />
+  <meta name="twitter:title" content="Logo Pizza" />
+  <meta name="twitter:description" content="Hot and ready logos for sale" />
+  <meta name="twitter:image" content="http://logo.pizza/img/collage-card.png" />
+  {{! Facebook OpenGraph }}
+  <meta property="og:url" content="https://logo.pizza" />
+  <meta property="og:type" content="article" />
+  <meta property="og:title" content="Logo Pizza" />
+  <meta property="og:image" content="http://logo.pizza/img/collage-card.png" />
+  <meta property="og:site_name" content="Logo Pizza" />
+  <meta property="og:description" content="Hot and ready logos for sale" />
+
 </head>
 <body>
 
