--- a/templates/logo-page.mustache
+++ b/templates/logo-page.mustache
@@ -61,7 +61,7 @@
         {{> custom-colors}}
 
         {{#unless isSold}}
-          <button class="purchase-button">Buy Logo $80</button>
+          <button class="purchase-button">Buy Logo ${{currentPrice}}</button>
 
           <div class="purchase-text">
             <p>Purchasing this logo you get:</p>
