--- a/modules/homepage-intro/homepage-intro.mustache
+++ b/modules/homepage-intro/homepage-intro.mustache
@@ -1,6 +1,8 @@
 <div class="homepage-intro col">
   <p class="homepage-intro__copy">
-    <strong class="homepage-intro__price-quote">Any logo: $40</strong>.
+    <strong class="homepage-intro__price-quote">Any logo:
+      <span class="current-price">${{currentPrice}}</span>
+    </strong>.
     Price increases by $40 with each logo sold.
   </p>
   <p class="homepage-intro__copy">Logos can be purchased only once. You alone get exclusive rights to use it.</p>
